# ismir2023

./: .gitignore  LICENSE  README.md  demo_harmonization.py  pyproject.toml
src/pitchcontext/: ComputePitchContext.py  PCParameters.py  __init__.py  base40.py  models.py  pitchcontext.py  song.py  visualize.py
testcorpus/: ratings.csv
testcorpus/json/: 00-NLB134850_01.json  01-NLB137593_01.json  02-NLB134863_01.json  03-NLB150950_01.json  04-NLB151230_01.json  05-NLB136515_01.json  06-NLB182888_01.json  07-NLB192149_01.json  08-NLB177683_01.json  09-NLB198182_01.json  10-NLB166270_01.json  11-NLB125189_01.json  12-NLB137557_01.json  13-NLB192133_01.json  14-NLB192421_01.json  15-NLB128074_01.json  16-NLB152531_01.json  17-NLB191120_01.json  18-NLB135460_01.json  19-NLB167276_02.json  20-NLB125615_01.json  21-NLB183433_01.json  22-NLB151429_01.json  23-NLB166251_01.json  24-NLB135683_01.json  25-NLB145069_01.json  26-NLB076386_01.json  27-NLB150183_01.json  28-NLB072588_01.json  29-NLB111380_01.json  30-NLB126895_01.json  31-NLB072907_01.json  32-NLB141292_01.json  33-NLB075503_01.json  34-NLB146572_01.json  35-NLB111849_01.json  36-NLB072188_01.json  37-NLB112002_01.json  38-NLB073540_02.json  39-NLB170303_01.json  (+10 more)
testcorpus/krn/: 00-NLB134850_01.krn  01-NLB137593_01.krn  02-NLB134863_01.krn  03-NLB150950_01.krn  04-NLB151230_01.krn  05-NLB136515_01.krn  06-NLB182888_01.krn  07-NLB192149_01.krn  08-NLB177683_01.krn  09-NLB198182_01.krn  10-NLB166270_01.krn  11-NLB125189_01.krn  12-NLB137557_01.krn  13-NLB192133_01.krn  14-NLB192421_01.krn  15-NLB128074_01.krn  (+34 more)
