[tool.poetry]
name = "ismir2023_VanKranenburg_Kearns"
version = "0.1.10dev"
description = ""
authors = ["Peter van Kranenburg <peter.van.kranenburg@meertens.knaw.nl>"]
readme = "README.md"
packages = [{include = "pitchcontext", from = "src"}]

[tool.poetry.dependencies]
#streamlit is not compatible with Python 3.9.7
python = ">=3.8,<3.9.7 || >3.9.7,<4.0" 
music21 = "^8.0"
numpy = "^1.19"
streamlit = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
